feat: 实现沉浸式僵尸主题 (Zombie Theme)
- 新增 ZombieOverlay 组件，包含扫描线、动态噪声及随机 Glitch 效果
- 集成 Creepster 恐怖字体并应用于全局显示与正文变量
- 添加 Zombie 颜色预设（Sickly Green & Rust Red），支持单键切换
- 在 Variables.css 中实现全局样式覆写：启用直角边框、虚线风格及渲染 text-shadow
- 更新中英文本地化，并将中文环境下的主题名称统一为 'Zombie'

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -271,16 +271,16 @@
       "spawn-protection": "Spawn Protection Radius",
       "sync-chunk-writes": "Sync Chunk Writes",
       "accepts-transfers": "Accept Transfers",
-      "enable-code-of-conduct":"Enable Code of Conduct",
-      "initial-enabled-packs":"Initial Enabled Packs",
-      "management-server-allowed-origins":"Management Server Allowed Origins",
-      "management-server-enabled":"Enable Remote Management API",
-      "management-server-host" : "Management Server Bind Host",
+      "enable-code-of-conduct": "Enable Code of Conduct",
+      "initial-enabled-packs": "Initial Enabled Packs",
+      "management-server-allowed-origins": "Management Server Allowed Origins",
+      "management-server-enabled": "Enable Remote Management API",
+      "management-server-host": "Management Server Bind Host",
       "management-server-port": "Management Server Bind Port",
       "management-server-secret": "Management Service Access Key",
       "management-server-tls-enabled": "Enable TLS Encryption",
       "management-server-tls-keystore": "TLS Keystore File Path",
-      "management-server-tls-keystore-password":"TLS Keystore Password",
+      "management-server-tls-keystore-password": "TLS Keystore Password",
       "use-native-transport": "Use Linux Native Transport Optimization",
       "log-ips": "Log Player IP Addresses",
       "max-chained-neighbor-updates": "Maximum Chained Neighbor Updates",
@@ -311,7 +311,7 @@
       "generator-settings": "World Generator Settings",
       "function-permission-level": "Function Permission Level",
       "entity-broadcast-range-percentage": "Entity Broadcast Range Percentage",
-      "enforce-secure-profile": "Enforce Secure Profiles", 
+      "enforce-secure-profile": "Enforce Secure Profiles",
       "enable-jmx-monitoring": "Enable JMX Monitoring",
       "bug-report-link": "Bug Report Link",
       "broadcast-rcon-to-ops": "Broadcast RCON Commands to Ops",
@@ -416,6 +416,7 @@
       "sunset": "Sunset",
       "ocean": "Ocean",
       "rose": "Rose",
+      "zombie": "Zombie",
       "custom": "Custom"
     },
     "edit_colorplan_options": {
