lang:再次增加了朝鲜朝鲜语、韩国韩语、法语、加拿大法语、阿根廷西语和火星文 (#138)
* lang:增加了接口

* 增加了更多的i18n接口

* lang:增加了朝鲜朝鲜语和韩国韩语

* lang:增加了法语

* lang:增加了加拿大法语

* lang:增加了阿根廷西语

* lang:增加了火星文

--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -120,7 +120,13 @@
     "british": "British English",
     "aussie": "Aussie English",
     "kansaiben": "関西弁",
-    "hokkaidou": "北海道"
+    "hokkaidou": "北海道",
+    "korean": "한국어",
+    "north_korean": "조선말",
+    "french": "Français",
+    "french_ca": "Français (Canada)",
+    "spanish_ar": "Español (Argentina)",
+    "huoxing": "焱暒妏"
   },
   "home": {
     "title": "Управление серверами",
