--- a/src/locales/ja-KS.json
+++ b/src/locales/ja-KS.json
@@ -119,7 +119,13 @@
     "british": "British English",
     "aussie": "Aussie English",
     "kansaiben": "関西弁",
-    "hokkaidou": "北海道弁"
+    "hokkaidou": "北海道弁",
+    "korean": "한국어",
+    "north_korean": "조선말",
+    "french": "Français",
+    "french_ca": "Français (Canada)",
+    "spanish_ar": "Español (Argentina)",
+    "huoxing": "焱暒妏"
   },
   "home": {
     "title": "サーバー管理",
