--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -111,16 +111,22 @@
     "chinese_tj": "天津話",
     "cantonese": "粵語",
     "russian": "Русский",
-    "chinese_cy": "川渝话",
-    "chinese_wu": "吴语",
-    "chinese_hokkien": "闽南语",
-    "chinese_hn": "河南话",
-    "chinese_jl": "胶辽官话",
+    "chinese_cy": "川渝話",
+    "chinese_wu": "吳語",
+    "chinese_hokkien": "閩南語",
+    "chinese_hn" : "河南話",
+    "chinese_jl": "膠遼官話",
     "vietnamese": "Tiếng Việt",
     "british": "British English",
     "aussie": "Aussie English",
     "kansaiben": "関西弁",
-    "hokkaidou": "北海道"
+    "hokkaidou": "北海道",
+    "korean": "한국어",
+    "north_korean": "조선말",
+    "french": "Français",
+    "french_ca": "Français (Canada)",
+    "spanish_ar": "Español (Argentina)",
+    "huoxing": "焱暒妏"
   },
   "home": {
     "title": "伺服器管理",
