--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -85,7 +85,9 @@
     "config_performance": "Leistung",
     "config_display": "Anzeige",
     "config_other": "Sonstiges",
-    "config_saved": "Konfiguration gespeichert"
+    "config_saved": "Konfiguration gespeichert",
+    "refresh": "Aktualisieren",
+    "save": "Speichern"
   },
   "sidebar": {
     "groups": {
@@ -260,16 +262,47 @@
       "level-type": "Welttyp",
       "view-distance": "Sichtweite",
       "simulation-distance": "Simulationsdistanz",
-      "max-tick-time": "Max. Tick-Zeit, -1 zum Deaktivieren",
+      "max-tick-time": "Max. Tick-Zeit (ms), -1 zum Deaktivieren",
       "network-compression-threshold": "Netzwerk-Komprimierungsschwelle",
-      "motd": "Serverbeschreibung",
+      "motd": "Serverbeschreibung (MOTD)",
       "enable-command-block": "Befehlsblöcke aktivieren",
       "enable-query": "Query aktivieren",
       "enable-rcon": "RCON aktivieren",
       "enable-status": "Serverlisten-Status aktivieren",
       "force-gamemode": "Spielmodus erzwingen",
       "spawn-protection": "Spawn-Schutzradius",
-      "sync-chunk-writes": "Chunk-Schreibvorgänge synchronisieren"
+      "sync-chunk-writes": "Chunk-Schreibvorgänge synchronisieren",
+      "resource-pack": "Ressourcenpaket-URL",
+      "resource-pack-id": "Ressourcenpaket-ID",
+      "resource-pack-prompt": "Ressourcenpaket-Hinweis",
+      "resource-pack-sha1": "Ressourcenpaket SHA1-Hash",
+      "text-filtering-config": "Textfilter-Konfiguration",
+      "text-filtering-version": "Textfilter-Version",
+      "broadcast-rcon-to-ops": "RCON-Nachrichten an OPs senden",
+      "bug-report-link": "Bugmelde-Link",
+      "enable-jmx-monitoring": "JMX-Überwachung aktivieren",
+      "enforce-secure-profile": "Sicheres Profil erzwingen",
+      "entity-broadcast-range-percentage": "Entitäts-Sendebereich in Prozent",
+      "function-permission-level": "Funktions-Berechtigungsstufe",
+      "generator-settings": "Generator-Einstellungen",
+      "hide-online-players": "Online-Spieler verbergen",
+      "initial-disabled-packs": "Initial deaktivierte Datenpakete",
+      "accepts-transfers": "Übertragungen akzeptieren",
+      "broadcast-console-to-ops": "Konsolenmeldungen an OPs senden",
+      "log-ips": "IP-Adressen protokollieren",
+      "max-chained-neighbor-updates": "Max. verkettete Nachbarupdates",
+      "max-world-size": "Max. Weltgröße",
+      "op-permission-level": "OP-Berechtigungsstufe",
+      "pause-when-empty-seconds": "Pause bei leerem Server (Sekunden)",
+      "player-idle-timeout": "Spieler-Inaktivitäts-Timeout",
+      "prevent-proxy-connections": "Proxy-Verbindungen verhindern",
+      "query.port": "Query-Port",
+      "rate-limit": "Ratenbegrenzung",
+      "rcon.password": "RCON-Passwort",
+      "rcon.port": "RCON-Port",
+      "region-file-compression": "Regionen-Dateikomprimierung",
+      "require-resource-pack": "Ressourcenpaket erzwingen",
+      "use-native-transport": "Nativer Transport"
     }
   },
   "players": {
@@ -514,7 +547,26 @@
     "open_link_failed": "Link konnte nicht geöffnet werden",
     "update_check_failed": "Update-Prüfung fehlgeschlagen",
     "update_download_failed": "Download fehlgeschlagen",
-    "github_repo": "GitHub-Repository"
+    "github_repo": "GitHub-Repository",
+    "aur_update_tip": "Sie haben SeaLantern über {helper} installiert. Bitte öffnen Sie ein Terminal und führen Sie aus: {helper} -Syu sealantern",
+    "aur_update_available": "AUR-Update verfügbar",
+    "aur_detected": "Erkannt, dass Sie SeaLantern über AUR installiert haben. Bitte verwenden Sie den Paketmanager zum Aktualisieren:",
+    "install_source": "Installationsquelle",
+    "aur_window_title_update": "AUR-Update verfügbar",
+    "aur_window_title_info": "AUR-Versionsinformationen",
+    "aur_window_new_version": "Eine neue Version ist im AUR verfügbar!",
+    "aur_window_aur_version": "Sie verwenden die AUR-Version",
+    "aur_window_current_version": "Aktuelle Version:",
+    "aur_window_latest_version": "Neueste Version:",
+    "aur_window_release_notes": "📝 Versionshinweise:",
+    "aur_window_no_notes": "Keine Versionshinweise verfügbar",
+    "aur_window_single_update": "Nur dieses Paket aktualisieren (empfohlen):",
+    "aur_window_global_update": "Oder alle Pakete aktualisieren:",
+    "aur_window_global_note": "⚠️ Hinweis: Dies aktualisiert alle über AUR installierten Pakete im System",
+    "aur_window_copy_tip": "Klicken Sie zum Kopieren und fügen Sie es dann im Terminal ein",
+    "aur_window_copy_success": "Befehl in die Zwischenablage kopiert",
+    "aur_window_copy_failed": "Kopieren fehlgeschlagen",
+    "aur_window_button": "OK"
   },
   "tray": {
     "minimize": "In Taskleiste minimieren",
