--- a/src/locales/en-AU.json
+++ b/src/locales/en-AU.json
@@ -85,7 +85,9 @@
     "config_performance": "Performance",
     "config_display": "Display",
     "config_other": "Other",
-    "config_saved": "Config saved"
+    "config_saved": "Config saved",
+    "refresh": "Refresh",
+    "save": "Save"
   },
   "sidebar": {
     "groups": {
@@ -260,16 +262,47 @@
       "level-type": "World Type",
       "view-distance": "View Distance",
       "simulation-distance": "Simulation Distance",
-      "max-tick-time": "Max Tick Time, -1 to disable",
-      "network-compression-threshold": "Network Compression",
-      "motd": "Server Description",
+      "max-tick-time": "Max Tick Time (ms), -1 to disable",
+      "network-compression-threshold": "Network Compression Threshold",
+      "motd": "Server Description (MOTD)",
       "enable-command-block": "Enable Command Blocks",
       "enable-query": "Enable Query",
       "enable-rcon": "Enable RCON",
-      "enable-status": "Show in Server List",
+      "enable-status": "Enable Server List Status",
       "force-gamemode": "Force Game Mode",
-      "spawn-protection": "Spawn Protection",
-      "sync-chunk-writes": "Sync Chunk Writes"
+      "spawn-protection": "Spawn Protection Radius",
+      "sync-chunk-writes": "Sync Chunk Writes",
+      "resource-pack": "Resource Pack URL",
+      "resource-pack-id": "Resource Pack ID",
+      "resource-pack-prompt": "Resource Pack Prompt",
+      "resource-pack-sha1": "Resource Pack SHA1 Hash",
+      "text-filtering-config": "Text Filtering Config",
+      "text-filtering-version": "Text Filtering Version",
+      "broadcast-rcon-to-ops": "Broadcast RCON to Ops",
+      "bug-report-link": "Bug Report Link",
+      "enable-jmx-monitoring": "Enable JMX Monitoring",
+      "enforce-secure-profile": "Enforce Secure Profile",
+      "entity-broadcast-range-percentage": "Entity Broadcast Range %",
+      "function-permission-level": "Function Permission Level",
+      "generator-settings": "Generator Settings",
+      "hide-online-players": "Hide Online Players",
+      "initial-disabled-packs": "Initial Disabled Packs",
+      "accepts-transfers": "Accepts Transfers",
+      "broadcast-console-to-ops": "Broadcast Console to Ops",
+      "log-ips": "Log IPs",
+      "max-chained-neighbor-updates": "Max Chained Neighbor Updates",
+      "max-world-size": "Max World Size",
+      "op-permission-level": "OP Permission Level",
+      "pause-when-empty-seconds": "Pause When Empty (seconds)",
+      "player-idle-timeout": "Player Idle Timeout",
+      "prevent-proxy-connections": "Prevent Proxy Connections",
+      "query.port": "Query Port",
+      "rate-limit": "Rate Limit",
+      "rcon.password": "RCON Password",
+      "rcon.port": "RCON Port",
+      "region-file-compression": "Region File Compression",
+      "require-resource-pack": "Require Resource Pack",
+      "use-native-transport": "Use Native Transport"
     }
   },
   "players": {
@@ -514,7 +547,26 @@
     "open_link_failed": "Couldn't open the link",
     "update_check_failed": "Update check failed",
     "update_download_failed": "Download failed",
-    "github_repo": "GitHub Repo"
+    "github_repo": "GitHub Repo",
+    "aur_update_tip": "You installed SeaLantern via {helper}. Open a terminal and run: {helper} -Syu sealantern",
+    "aur_update_available": "AUR update available",
+    "aur_detected": "We detected you installed SeaLantern via AUR. Please use your package manager to update:",
+    "install_source": "Installation source",
+    "aur_window_title_update": "AUR Update Available",
+    "aur_window_title_info": "AUR Version Info",
+    "aur_window_new_version": "A new version is available in AUR!",
+    "aur_window_aur_version": "You're using the AUR version",
+    "aur_window_current_version": "Current version:",
+    "aur_window_latest_version": "Latest version:",
+    "aur_window_release_notes": "📝 Release notes:",
+    "aur_window_no_notes": "No release notes available",
+    "aur_window_single_update": "Update just this (recommended):",
+    "aur_window_global_update": "Or update everything:",
+    "aur_window_global_note": "⚠️ Heads up: This updates all AUR packages on your system",
+    "aur_window_copy_tip": "Click to copy, then paste in terminal",
+    "aur_window_copy_success": "Command copied to clipboard",
+    "aur_window_copy_failed": "Copy failed",
+    "aur_window_button": "Got it"
   },
   "tray": {
     "minimize": "Minimise to tray",
