feat(i18n): 重构国际化系统并添加语言名称字段
重构国际化系统，从远程加载改为动态导入本地语言文件，并添加 languageName 字段用于显示语言名称。同时优化语言选择界面，支持更多语言展开收起功能，并移除不再使用的语言文件。

- 将远程加载逻辑改为动态导入本地语言文件
- 为每种语言添加 languageName 字段
- 优化语言选择界面，支持主要语言和更多语言分类
- 移除不再使用的方言语言文件
- 添加长辈模式相关设置
- 修复主题选项未使用计算属性的问题

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -1,4 +1,5 @@
 {
+  "languageName": "English",
   "common": {
     "app_name": "Sea Lantern",
     "home": "Home",
@@ -128,7 +129,9 @@
     "french": "Français",
     "french_ca": "Français (Canada)",
     "spanish_ar": "Español (Argentina)",
-    "huoxing": "焱暒妏"
+    "huoxing": "焱暒妏",
+    "more_languages": "More Languages",
+    "less_languages": "Less Languages"
   },
   "home": {
     "title": "Server Management",
@@ -499,7 +502,9 @@
     "developer_mode": "Developer Mode",
     "developer_mode_desc": "Enable advanced features and debugging options",
     "developer_mode_toggle": "Toggle Developer Mode",
-    "developer_mode_toggle_desc": "Enable to use debug tools while in developer mode"
+    "developer_mode_toggle_desc": "Enable to use debug tools while in developer mode",
+    "senior_mode": "Senior Mode",
+    "senior_mode_desc": "Enable larger text and simplified interface for easier use"
   },
   "about": {
     "title": "About",
