完成了arch安装命令行指引，同时完成了语言的国际化

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -576,7 +576,24 @@
     "open_link_failed": "Failed to open link",
     "update_check_failed": "Failed to check updates",
     "update_download_failed": "Download failed",
-    "github_repo": "GitHub Repository"
+    "github_repo": "GitHub Repository",
+    "aur_update_available": "AUR Update Available",
+    "install_source": "Installation Source",
+    "aur_window_title_update": "AUR Update Available",
+    "aur_window_title_info": "AUR Version Info",
+    "aur_window_new_version": "New version available on AUR!",
+    "aur_window_aur_version": "You are using AUR version",
+    "aur_window_current_version": "Current version:",
+    "aur_window_latest_version": "Latest version:",
+    "aur_window_release_notes": "📝 Release Notes:",
+    "aur_window_no_notes": "No release notes",
+    "aur_window_single_update": "Single update (recommended):",
+    "aur_window_global_update": "Or global update:",
+    "aur_window_global_note": "⚠️ Note: This will update all packages installed via AUR",
+    "aur_window_copy_tip": "Click copy button, then paste in terminal",
+    "aur_window_copy_success": "Command copied to clipboard",
+    "aur_window_copy_failed": "Copy failed",
+    "aur_window_button": "Got it"
   },
   "tray": {
     "minimize": "Minimize to Tray",
