--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -116,7 +116,7 @@
     "chinese_cy": "川渝话",
     "chinese_wu": "吴语",
     "chinese_hokkien": "闽南语",
-    "chinese_hn": "河南话",
+    "chinese_hn" : "河南话",
     "chinese_jl": "胶辽官话",
     "vietnamese": "Tiếng Việt",
     "british": "British English",
@@ -297,16 +297,16 @@
       "initial-disabled-packs": "初始禁用的数据包",
       "accepts-transfers": "接受传输",
       "broadcast-console-to-ops": "向OP广播控制台消息",
-      "enable-code-of-conduct": "启用行为准则",
-      "initial-enabled-packs": "初始启用的数据包",
-      "management-server-allowed-origins": "管理服务器允许的资源包来源",
-      "management-server-enabled": "启用远程管理接口",
-      "management-server-host": "服务端管理协议绑定的主机名或IP地址",
+      "enable-code-of-conduct":"启用行为准则",
+      "initial-enabled-packs":"初始启用的数据包",
+      "management-server-allowed-origins":"管理服务器允许的资源包来源",
+      "management-server-enabled":"启用远程管理接口",
+      "management-server-host" : "服务端管理协议绑定的主机名或IP地址",
       "management-server-port": "服务端管理协议绑定的端口",
       "management-server-secret": "管理服务访问密钥",
       "management-server-tls-enabled": "是否启用管理服务端的 TLS（传输层安全性协议）加密",
       "management-server-tls-keystore": "保存服务端用于TLS加密的私钥和证书的密钥库（KeyStore）文件路径",
-      "management-server-tls-keystore-password": "用于访问TLS密钥库（KeyStore）文件的密码",
+      "management-server-tls-keystore-password":"用于访问TLS密钥库（KeyStore）文件的密码",
       "use-native-transport": "是否启用针对Linux平台的数据包收发优化",
       "log-ips": "是否在服务器日志中记录玩家的 IP 地址",
       "max-chained-neighbor-updates": "最大连续连锁更新的次数",
@@ -403,8 +403,6 @@
     "acrylic": "亚克力效果 (毛玻璃)",
     "acrylic_desc": "启用 Windows 系统级亚克力毛玻璃效果，与背景图片兼容",
     "acrylic_not_supported": "当前系统不支持亚克力效果",
-    "senior_mode": "长辈模式",
-    "senior_mode_desc": "开启后将调大全局字号及间距，并优化界面对比度，让长辈读得清、看得明。",
     "background": "背景图片",
     "background_desc": "上传一张图片作为软件背景，支持 PNG、JPG、WEBP 等格式",
     "opacity": "不透明度",
@@ -428,7 +426,6 @@
       "sunset": "Sunset",
       "ocean": "Ocean",
       "rose": "Rose",
-      "zombie": "Zombie",
       "custom": "自定义"
     },
     "edit_colorplan_options": {
@@ -467,13 +464,6 @@
     "reset_title": "确认恢复默认",
     "browse_java": "点击浏览选择 java.exe",
     "browse_jar": "点击浏览选择 .jar 文件",
-    "java_download": "自动安装 Java",
-    "java_download_desc": "从 Adoptium 官方下载并配置 JDK 环境 (推荐)",
-    "java_download_btn": "一键安装",
-    "java_version_select": "选择版本",
-    "java_installing": "正在下载...",
-    "java_install_success": "安装完成: ",
-    "java_install_failed": "安装失败: ",
     "server_name_placeholder": "输入名称",
     "color_theme": "颜色主题",
     "color_theme_desc": "自定义软件颜色主题",
@@ -580,7 +570,24 @@
     "open_link_failed": "无法打开链接",
     "update_check_failed": "检查更新失败",
     "update_download_failed": "下载失败",
-    "github_repo": "GitHub 仓库"
+    "github_repo": "GitHub 仓库",
+    "aur_update_available": "AUR 更新可用",
+    "install_source": "安装来源",
+    "aur_window_title_update": "AUR 更新可用",
+    "aur_window_title_info": "AUR 版本信息",
+    "aur_window_new_version": "AUR 上有新版本可用！",
+    "aur_window_aur_version": "您使用的是 AUR 版本",
+    "aur_window_current_version": "当前版本：",
+    "aur_window_latest_version": "最新版本：",
+    "aur_window_release_notes": "📝 更新内容：",
+    "aur_window_no_notes": "暂无更新说明",
+    "aur_window_single_update": "单独更新（推荐）：",
+    "aur_window_global_update": "或者全局更新：",
+    "aur_window_global_note": "⚠️ 注意：这会更新系统中所有通过 AUR 安装的包",
+    "aur_window_copy_tip": "点击复制按钮，然后在终端中粘贴执行",
+    "aur_window_copy_success": "命令已复制到剪贴板",
+    "aur_window_copy_failed": "复制失败",
+    "aur_window_button": "我知道了"
   },
   "tray": {
     "minimize": "最小化到后台",
