--- a/lang/ja-JP.json
+++ b/lang/ja-JP.json
@@ -96,39 +96,7 @@
     },
     "collapse_btn": "サイドバーを閉じる"
   },
-  "header": {
-    "language": "言語",
-    "chinese": "简体中文",
-    "english": "English",
-    "chinese_tw": "繁體中文",
-    "chinese_jb": "梗体中文",
-    "chinese_dongbei": "東北方言",
-    "japanese": "日本語",
-    "upsidedown": "ƎƃuɐuɐW",
-    "chinese_meow": "猫語",
-    "spanish": "Español",
-    "deutsch": "Deutsch",
-    "pirate": "Pirate",
-    "chinese_tj": "天津話",
-    "cantonese": "広東語",
-    "russian": "Русский",
-    "chinese_cy": "四川話",
-    "chinese_wu": "呉語",
-    "chinese_hokkien": "福建語",
-    "chinese_hn" : "河南話",
-    "chinese_jl": "膠遼官話",
-    "vietnamese": "ベトナム語",
-    "british": "British English",
-    "aussie": "Aussie English",
-    "kansaiben": "関西弁",
-    "hokkaidou": "北海道弁",
-    "korean": "한국어",
-    "north_korean": "조선말",
-    "french": "Français",
-    "french_ca": "Français (Canada)",
-    "spanish_ar": "Español (Argentina)",
-    "huoxing": "焱暒妏"
-  },
+
   "home": {
     "title": "サーバー管理",
     "no_servers": "サーバーがありません",
@@ -441,6 +409,9 @@
     "unsaved_changes": "未保存の変更があります",
     "export": "エクスポート",
     "import": "インポート",
+    "java_download": "Java をダウンロード",
+    "java_download_desc": "システムに Java がインストールされていない場合、または最新バージョンが必要な場合は、ここからダウンロードできます",
+    "java_download_btn": "Java 17 (LTS) をダウンロード",
     "reset": "デフォルトに戻す",
     "import_settings": "設定をインポート",
     "import_desc": "以前エクスポートしたJSONデータを貼り付け",
