--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -98,41 +98,7 @@
     },
     "collapse_btn": "收起侧栏"
   },
-  "header": {
-    "language": "语言",
-    "chinese": "简体中文",
-    "english": "English",
-    "chinese_tw": "繁體中文",
-    "chinese_jb": "梗体中文",
-    "chinese_dongbei": "东北话",
-    "japanese": "日本語",
-    "upsidedown": "ƎƃuɐuɐW",
-    "chinese_meow": "喵语",
-    "spanish": "Español",
-    "deutsch": "Deutsch",
-    "pirate": "Pirate",
-    "chinese_tj": "天津话",
-    "cantonese": "粤语",
-    "russian": "Русский",
-    "chinese_cy": "川渝话",
-    "chinese_wu": "吴语",
-    "chinese_hokkien": "闽南语",
-    "chinese_hn" : "河南话",
-    "chinese_jl": "胶辽官话",
-    "vietnamese": "Tiếng Việt",
-    "british": "British English",
-    "aussie": "Aussie English",
-    "kansaiben": "関西弁",
-    "hokkaidou": "北海道",
-    "korean": "한국어",
-    "north_korean": "조선말",
-    "french": "Français",
-    "french_ca": "Français (Canada)",
-    "spanish_ar": "Español (Argentina)",
-    "huoxing": "焱暒妏",
-    "more_languages": "更多语言",
-    "less_languages": "收起语言"
-  },
+
   "home": {
     "title": "服务器管理",
     "no_servers": "暂无服务器",
@@ -447,6 +413,9 @@
     "unsaved_changes": "有未保存的更改",
     "export": "导出",
     "import": "导入",
+    "java_download": "下载 Java",
+    "java_download_desc": "如果系统中没有 Java 或需要更新版本，可以从这里下载",
+    "java_download_btn": "下载 Java 17 (LTS)",
     "reset": "恢复默认",
     "import_settings": "导入设置",
     "import_desc": "粘贴之前导出的 JSON 数据",
