--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -96,39 +96,7 @@
     },
     "collapse_btn": "收起側欄"
   },
-  "header": {
-    "language": "語言",
-    "chinese": "简体中文",
-    "english": "English",
-    "chinese_tw": "繁體中文",
-    "chinese_jb": "梗體中文",
-    "chinese_dongbei": "東北話",
-    "japanese": "日本語",
-    "upsidedown": "ƎƃuɐuɐW",
-    "chinese_meow": "喵語",
-    "spanish": "Español",
-    "deutsch": "Deutsch",
-    "pirate": "Pirate",
-    "chinese_tj": "天津話",
-    "cantonese": "粵語",
-    "russian": "Русский",
-    "chinese_cy": "川渝話",
-    "chinese_wu": "吳語",
-    "chinese_hokkien": "閩南語",
-    "chinese_hn" : "河南話",
-    "chinese_jl": "膠遼官話",
-    "vietnamese": "Tiếng Việt",
-    "british": "British English",
-    "aussie": "Aussie English",
-    "kansaiben": "関西弁",
-    "hokkaidou": "北海道",
-    "korean": "한국어",
-    "north_korean": "조선말",
-    "french": "Français",
-    "french_ca": "Français (Canada)",
-    "spanish_ar": "Español (Argentina)",
-    "huoxing": "焱暒妏"
-  },
+
   "home": {
     "title": "伺服器管理",
     "no_servers": "暫無伺服器",
@@ -440,6 +408,9 @@
     "unsaved_changes": "有未儲存的變更",
     "export": "匯出",
     "import": "匯入",
+    "java_download": "下載 Java",
+    "java_download_desc": "如果系統中沒有 Java 或需要更新版本，可以從這裡下載",
+    "java_download_btn": "下載 Java 17 (LTS)",
     "reset": "恢復預設",
     "import_settings": "匯入設定",
     "import_desc": "貼上之前匯出的 JSON 資料",
