--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -463,8 +463,14 @@
     "import_title": "导入设置",
     "reset_title": "确认恢复默认",
     "browse_java": "点击浏览选择 java.exe",
-    "browse_jar": "点击浏览选择 .jar 文件",
-    "server_name_placeholder": "输入名称",
+    "java_download": "自动安装 Java",
+    "java_download_desc": "从 Adoptium 下载并配置 JDK 环境",
+    "java_download_btn": "一键安装",
+    "java_version_select": "选择版本",
+    "java_installing": "下载中...",
+    "java_install_success": "安装完成：",
+    "java_install_failed": "安装失败：",
+    "server_name_placeholder":"输入名称",
     "color_theme": "颜色主题",
     "color_theme_desc": "自定义软件颜色主题",
     "use_preset_colortheme": "使用预设",
