--- a/lang/ru-RU.json
+++ b/lang/ru-RU.json
@@ -115,6 +115,10 @@
     "detail_view": "Детальный вид",
     "gauge_view": "Вид с индикаторами",
     "recent_alerts": "Последние предупреждения / Ошибки",
+    "cpu": "CPU",
+    "memory": "Память",
+    "disk": "Диск",
+    "core": "Ядро",
     "delete_confirm_message": "Введите имя сервера {{server}} для подтверждения удаления",
     "delete_input_placeholder": "Введите имя сервера",
     "delete_cancel": "Отмена",
