--- a/lang/vi-VN.json
+++ b/lang/vi-VN.json
@@ -115,6 +115,10 @@
     "detail_view": "Chuyển sang chế độ xem chi tiết",
     "gauge_view": "Chuyển sang chế độ xem đồng hồ",
     "recent_alerts": "Cảnh báo / Lỗi gần đây",
+    "cpu": "CPU",
+    "memory": "Bộ nhớ",
+    "disk": "Ổ cứng",
+    "core": "Nhân",
     "delete_confirm_message": "Nhập tên máy chủ {{server}} để xác nhận xóa",
     "delete_input_placeholder": "Nhập tên máy chủ",
     "delete_cancel": "Hủy",
