--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -126,7 +126,11 @@
     "close_window_message": "您确定要关闭 SeaLantern 吗？",
     "remember_choice": "记住我的选择",
     "close_action_minimize": "最小化到托盘",
-    "close_action_close": "直接关闭"
+    "close_action_close": "直接关闭",
+    "cpu": "CPU",
+    "memory": "内存",
+    "disk": "磁盘",
+    "core": "核心"
   },
   "create": {
     "title": "创建服务器",
