feat: 新增多个功能模块和优化现有代码
refactor(serverStatus): 重构服务器状态工具函数，增加更多状态判断方法
feat(composables): 新增 useTabIndicator、useAsync 和 useMessage 组合式函数
feat(components): 新增 SLConfirmDialog 确认对话框组件
refactor(views): 重构多个视图使用新的组合式函数
style: 优化代码格式和样式
fix: 修复少量i18n问题

--- a/docs/项目结构.md
+++ b/docs/项目结构.md
@@ -79,6 +79,9 @@ sea-lantern/
 │   │   └── index.ts                  # 组件导出文件
 │   │
 │   ├── composables/                   # 组合式函数
+│   │   ├── useAsync.ts               # 异步操作处理
+│   │   ├── useMessage.ts             # 消息处理
+│   │   ├── useTabIndicator.ts        # 标签指示器
 │   │   └── useToast.ts               # 提示组件的组合式函数
 │   │
 │   ├── data/                          # 静态数据
@@ -105,7 +108,8 @@ sea-lantern/
 │   │   ├── reset.css                  # 浏览器样式重置
 │   │   ├── typography.css             # 排版样式
 │   │   ├── animations.css             # 动画关键帧
-│   │   └── glass.css                  # 毛玻璃效果样式
+│   │   ├── glass.css                  # 毛玻璃效果样式
+│   │   └── initial.css                # 初始样式
 │   │
 │   ├── types/                         # 类型定义
 │   │   ├── common.ts                  # 通用类型定义
@@ -114,6 +118,7 @@ sea-lantern/
 │   ├── utils/                         # 工具函数
 │   │   ├── constants.ts               # 常量定义
 │   │   ├── errorHandler.ts            # 错误处理工具
+│   │   ├── format.ts                  # 格式化工具
 │   │   ├── logger.ts                  # 日志工具
 │   │   ├── serverStatus.ts            # 服务器状态工具
 │   │   ├── tray.ts                    # 系统托盘工具
@@ -193,8 +198,7 @@ sea-lantern/
 │   │   │   ├── mod.rs                 # 模块导出
 │   │   │   ├── server.rs              # 服务器实例、状态数据结构
 │   │   │   ├── config.rs              # 配置项数据结构
-│   │   │   ├── settings.rs            # 应用设置数据结构
-│   │   │   └── dev_config.rs          # 开发者配置数据结构
+│   │   │   └── settings.rs            # 应用设置数据结构
 │   │   │
 │   │   ├── utils/                     # 工具函数
 │   │   │   ├── mod.rs                 # 工具模块
@@ -228,8 +232,6 @@ sea-lantern/
 │   ├── AI_GUIDE.md                    # AI 使用指南
 │   ├── CONTRIBUTING.md                # 贡献指南
 │   ├── CONTRIBUTING-en.md             # 英文贡献指南
-│   ├── i18n-help.md                   # 国际化帮助
-│   ├── i18n-list.md                   # 国际化语言列表
 │   ├── 新手使用教程.html              # 新手使用教程
 │   └── 项目结构.md                    # 项目结构文档
 │
