--- a/lang/de-DE.json
+++ b/lang/de-DE.json
@@ -544,5 +544,7 @@
     "minimize": "In Taskleiste minimieren",
     "show": "Anzeigen",
     "quit": "Beenden"
-  }
+  },
+
+  "delete_server": "Server löschen"
 }
