--- a/lang/fr-FA.json
+++ b/lang/fr-FA.json
@@ -549,5 +549,7 @@
     "minimize": "Réduire dans la barre d'état",
     "show": "Afficher",
     "quit": "Quitter"
-  }
+  },
+
+  "delete_server": "Supprimer le serveur"
 }
