refactor: 移除僵尸主题相关代码和资源
移除不再使用的僵尸主题相关代码、样式和资源文件，包括：
- 移除僵尸主题的颜色选项
- 删除僵尸主题的CSS样式
- 删除僵尸主题的覆盖层组件
- 清理相关视图和布局中的僵尸主题逻辑

--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -389,11 +389,10 @@
     },
     "color_options": {
       "default": "預設",
-      "midnight": "午夜",
-      "forest": "森林",
-      "sunset": "日落",
-      "ocean": "海洋",
-      "rose": "玫瑰",
+      "midnight": "Midnight",
+      "forest": "Forest",
+      "sunset": "Sunset",
+      "ocean": "Ocean",
       "custom": "自訂"
     },
     "edit_colorplan_options": {
